--- a/style.css
+++ b/style.css
@@ -22,3 +22,22 @@
     width: 100%;
     text-align: left;
 }
+
+h4
+{
+    background-color: #f5f5f5;
+    line-height: 2;
+    margin: 0px;
+}
+
+.modal-dialog
+{
+    width: 90%;
+}
+
+.instruction_image
+{
+    display: inline-block;
+    width: 45%;
+}
+
