--- a/style.css
+++ b/style.css
@@ -41,3 +41,10 @@ h4
     width: 45%;
 }
 
+video
+{
+    background: url('game_console.png');
+    background-size: cover;
+    background-position: center;
+    padding: 25px;
+}
